@@ -1,3 +1,7 @@
+2002-01-22  Werner Koch  <wk@gnupg.org>
+
+	* cert-basic.c (list_extensions): New.
+
 2002-01-11  Werner Koch  <wk@gnupg.org>
 
 	* t-crl-parser.c: Add commented test to write a hash log
